--- a/Redmine.ManagerWPF/Views/MainWindow.xaml
+++ b/Redmine.ManagerWPF/Views/MainWindow.xaml
@@ -1,14 +1,13 @@
 ﻿<Window
     x:Class="Redmine.ManagerWPF.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:tb="http://www.hardcodet.net/taskbar"
-    xmlns:treeModels="clr-namespace:Redmine.ManagerWPF.Desktop.Models.Tree"
     xmlns:uc="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
     xmlns:ui="http://schemas.modernwpf.com/2019"
     xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
@@ -31,7 +30,6 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <BitmapImage x:Key="Add" UriSource="/Resources/add.png" />
         <BitmapImage x:Key="Trash" UriSource="/Resources/bin.png" />
-
     </Window.Resources>
 
     <Grid>
@@ -153,52 +151,13 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
         </Grid>
-        <TreeView
+        <Grid
             Grid.Row="2"
             Grid.RowSpan="2"
-            Grid.Column="0"
-            MinHeight="400"
-            Margin="10"
-            VerticalAlignment="Stretch"
-            BorderThickness="1"
-            ItemsSource="{Binding Issues}">
-            <TreeView.ItemContainerStyle>
-                <Style BasedOn="{StaticResource {x:Type TreeViewItem}}" TargetType="{x:Type TreeViewItem}">
-                    <Setter Property="Tag" Value="{Binding DataContext, RelativeSource={RelativeSource AncestorType={x:Type TreeView}}}" />
-                    <Setter Property="ContextMenu">
-                        <Setter.Value>
-                            <ContextMenu>
-                                <MenuItem
-                                    Command="{Binding PlacementTarget.Tag.SynchronizeNodeCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
-                                    CommandParameter="{Binding}"
-                                    Header="Synchronizuj" />
-                            </ContextMenu>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </TreeView.ItemContainerStyle>
-            <i:Interaction.Behaviors>
-                <customBehaviors:MainWindowTreeViewBehavior />
-            </i:Interaction.Behaviors>
-            <TreeView.ItemTemplate>
-                <HierarchicalDataTemplate DataType="{x:Type treeModels:TreeModel}" ItemsSource="{Binding Children}">
-                    <Grid HorizontalAlignment="Stretch">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="{Binding Name}" />
-                        <TextBlock
-                            Grid.Column="1"
-                            Margin="20,0,0,0"
-                            FontWeight="Bold"
-                            Foreground="Green"
-                            Text="Wykonane"
-                            Visibility="{Binding Done, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                    </Grid>
-                </HierarchicalDataTemplate>
-            </TreeView.ItemTemplate>
-        </TreeView>
+            Grid.Column="0" 
+            Visibility="{Binding ViewIssuesList, Converter={StaticResource BooleanToVisibilityConverter}}" VerticalAlignment="Stretch" >
+            <uc:MainWindowTreeView/>
+        </Grid>
         <Grid
             Grid.Row="1"
             Grid.Column="1"
